Update contact email and adjust grid layout in index.html and styles.css
- Changed the contact email from hello@spreadsheetexit.com to info@vsol.software for better communication.
- Modified the grid layout in styles.css to use a fixed two-column structure for improved consistency in display.

--- a/camp/index.html
+++ b/camp/index.html
@@ -569,7 +569,7 @@
                         <li>Spring Lake, Florida</li>
                         <li>Strategically located off I-75 S</li>
                         <li>Phone: 352-397-8650</li>
-                        <li>Email: hello@spreadsheetexit.com</li>
+                        <li>Email: info@vsol.software</li>
                     </ul>
                 </div>
                 
